# ChangeLog for net-im/choqok
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/choqok/ChangeLog,v 1.38 2013/10/26 21:02:26 ago Exp $

  26 Oct 2013; Agostino Sarubbo <ago@gentoo.org> choqok-1.4.ebuild:
  Stable for x86, wrt bug #489314

  26 Oct 2013; Agostino Sarubbo <ago@gentoo.org> choqok-1.4.ebuild:
  Stable for amd64, wrt bug #489314

*choqok-1.4 (04 Sep 2013)

  04 Sep 2013; Michael Palimaka <kensington@gentoo.org> +choqok-1.4.ebuild:
  Version bump.

  25 Jun 2013; Johannes Huber <johu@gentoo.org> -choqok-1.3.ebuild:
  Remove old.

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> choqok-1.3_p20130618.ebuild:
  Stable for amd64, wrt bug #473196

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> choqok-1.3_p20130618.ebuild:
  Stable for x86, wrt bug #473196

*choqok-1.3_p20130618 (18 Jun 2013)

  18 Jun 2013; Johannes Huber <johu@gentoo.org> +choqok-1.3_p20130618.ebuild,
  choqok-1.3.ebuild:
  Add upstream snapshot to have a functional version in tree again. Current
  stable does not work with present twitter api 1.1, see bug #473196.

  18 Apr 2012; Johannes Huber <johu@gentoo.org> -choqok-1.2.ebuild:
  Remove old.

  18 Apr 2012; Markus Meier <maekke@gentoo.org> choqok-1.3.ebuild:
  x86 stable, bug #409403

  04 Apr 2012; Agostino Sarubbo <ago@gentoo.org> choqok-1.3.ebuild:
  Stable for amd64, wrt bug #409403

*choqok-1.3 (13 Mar 2012)

  13 Mar 2012; Johannes Huber <johu@gentoo.org> +choqok-1.3.ebuild:
  Version bump.

  18 Feb 2012; nixnut <nixnut@gentoo.org> choqok-1.2.ebuild:
  ~ppc, preparing for #396359

  14 Feb 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  ayatana is now global per http://archives.gentoo.org/gentoo-
  dev/msg_f2eb26947d0c86020625a9aeca6f25e4.xml

  17 Jan 2012; Johannes Huber <johu@gentoo.org> -choqok-0.9.90-r1.ebuild,
  -choqok-1.1-r1.ebuild, -files/choqok-1.1-twitter.patch:
  Remove old.

  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org> choqok-1.2.ebuild: