@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
-DEPEND=dev-libs/qjson >=dev-libs/qoauth-1.0.1 ayatana? ( dev-libs/libindicate-qt ) >=sys-apps/sed-4 sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-util/automoc virtual/pkgconfig !aqua? ( >=x11-libs/libXtst-1.1.0 x11-proto/xf86vidmodeproto ) handbook? ( app-text/docbook-xml-dtd:4.2 app-text/docbook-xsl-stylesheets ) dev-lang/perl >=dev-qt/qt3support-4.8.0:4[accessibility] >=dev-qt/qtcore-4.8.0:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.0:4 || ( ( >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] dev-qt/designer:4[-phonon] ) <dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] ) >=dev-qt/qtscript-4.8.0:4 >=dev-qt/qtsql-4.8.0:4[qt3support] >=dev-qt/qtsvg-4.8.0:4 >=dev-qt/qttest-4.8.0:4 >=dev-qt/qtwebkit-4.8.0:4 !aqua? ( x11-libs/libXext x11-libs/libXt x11-libs/libXxf86vm x11-libs/libXcomposite x11-libs/libxkbfile ) >=kde-base/kdelibs-4.4:4[aqua=]
-DESCRIPTION=Free/Open Source micro-blogging client for KDE
-EAPI=5
-HOMEPAGE=http://choqok.gnufolks.org/
-IUSE=ayatana debug linguas_bg linguas_bs linguas_ca linguas_ca@valencia linguas_cs linguas_da linguas_de linguas_el linguas_en_GB linguas_eo linguas_es linguas_et linguas_fa linguas_fi linguas_fr linguas_ga linguas_gl linguas_hr linguas_hu linguas_is linguas_ja linguas_km linguas_lt linguas_ms linguas_nb linguas_nds linguas_nl linguas_pa linguas_pl linguas_pt linguas_pt_BR linguas_ro linguas_ru linguas_sk linguas_sq linguas_sv linguas_tr linguas_ug linguas_uk linguas_zh_CN linguas_zh_TW +handbook aqua
-KEYWORDS=amd64 ~ppc x86
-LICENSE=GPL-3
-RDEPEND=dev-libs/qjson >=dev-libs/qoauth-1.0.1 ayatana? ( dev-libs/libindicate-qt ) >=kde-base/oxygen-icons-4.4:4[aqua=] linguas_bg? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_bg(+)] ) linguas_bs? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_bs(+)] ) linguas_ca? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ca(+)] ) linguas_ca@valencia? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ca@valencia(+)] ) linguas_cs? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_cs(+)] ) linguas_da? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_da(+)] ) linguas_de? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_de(+)] ) linguas_el? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_el(+)] ) linguas_en_GB? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_en_GB(+)] ) linguas_eo? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_eo(+)] ) linguas_es? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_es(+)] ) linguas_et? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_et(+)] ) linguas_fa? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_fa(+)] ) linguas_fi? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_fi(+)] ) linguas_fr? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_fr(+)] ) linguas_ga? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ga(+)] ) linguas_gl? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_gl(+)] ) linguas_hr? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_hr(+)] ) linguas_hu? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_hu(+)] ) linguas_is? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_is(+)] ) linguas_ja? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ja(+)] ) linguas_km? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_km(+)] ) linguas_lt? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_lt(+)] ) linguas_ms? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ms(+)] ) linguas_nb? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_nb(+)] ) linguas_nds? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_nds(+)] ) linguas_nl? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_nl(+)] ) linguas_pa? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pa(+)] ) linguas_pl? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pl(+)] ) linguas_pt? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pt(+)] ) linguas_pt_BR? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pt_BR(+)] ) linguas_ro? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ro(+)] ) linguas_ru? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ru(+)] ) linguas_sk? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sk(+)] ) linguas_sq? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sq(+)] ) linguas_sv? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sv(+)] ) linguas_tr? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_tr(+)] ) linguas_ug? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ug(+)] ) linguas_uk? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_uk(+)] ) linguas_zh_CN? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_zh_CN(+)] ) linguas_zh_TW? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_zh_TW(+)] ) handbook? ( >=kde-base/kdelibs-4.4:4[aqua=,handbook] ) dev-lang/perl >=dev-qt/qt3support-4.8.0:4[accessibility] >=dev-qt/qtcore-4.8.0:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.0:4 || ( ( >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] dev-qt/designer:4[-phonon] ) <dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] ) >=dev-qt/qtscript-4.8.0:4 >=dev-qt/qtsql-4.8.0:4[qt3support] >=dev-qt/qtsvg-4.8.0:4 >=dev-qt/qttest-4.8.0:4 >=dev-qt/qtwebkit-4.8.0:4 !aqua? ( x11-libs/libXext x11-libs/libXt x11-libs/libXxf86vm x11-libs/libXcomposite x11-libs/libxkbfile ) >=kde-base/kdelibs-4.4:4[aqua=]
-SLOT=4
-SRC_URI=http://dev.gentoo.org/~johu/distfiles/choqok-1.3_p20130618.tar.xz
-_eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	4878e7f88afc0ba0866ac112190b0fd4	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	08a40a43c401c96d16477c02e56d9a64	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	kde4-base	5ba60672833e2a1cafaa86c446439d47	kde4-functions	7fc09e82c0d1735f44aedfa8e5073065	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=816023adfe945057da9c7614ca35c22a
