@@ -1,26 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST choqok-1.3_p20130618.tar.xz 984520 SHA256 02fc6f43af2fda8198b543e5a76cfed4f3a26832aa75d881f34e3c316b03f22a SHA512 029e85930c66bcc63ee0cd342cee4bfc34b072eace0d9b6b4ddb65fc5b64f78b42658c5c17ed6473500e493b693ffd65c5128373dbbb70cb492f59ef44bbeb44 WHIRLPOOL c1c37d12af38fc6f0613997e2c2f8550258b4f59ad4f0b6b7738fbd4677b09d9cc3ab5af7958c255070fef3807238b3b85d3f9a6090f0c242f17e6e24f545901
 DIST choqok-1.4.tar.xz 1021228 SHA256 70c8cfab14a691514d12c9c75d7009f27e3c26364ccbd81a541fea0ab76a92b7 SHA512 1fbfaba6b661789b1f5ec76130084b874eb8f5c65132bcbc34babae476c1d4ed197ca9af37404c5348439c54dca2a021c69a384fc718f184a1af014ed42ed006 WHIRLPOOL 3af414fa3ade0de8d277fe6752c20959881a9365471f13180432a84b7256f24085e2931c749354c386e1a4628000ccff4175c97bb2c657f0aa8c08cf3d984511
-EBUILD choqok-1.3_p20130618.ebuild 1009 SHA256 5f7b7b8740dc89c505e90ab7b9cb22218fcc700a2c79a2a8155e1793f91370eb SHA512 b38851bf22893cd4d8bda19e0b3c77678ebafbb19a75274315440849d247d719b8c0f4095831dc76167894c3c10c81703b9c6c40fd7b1916cc236b67e28aa2ea WHIRLPOOL 88b622757abdc6f476dd3af911feb35c48ab4ab2af855eda1e13c9b21e83d7d11ec8ffd9e5dfe07e23e5bf4a77e2fae986b044281d97c173b3213683fc494124
 EBUILD choqok-1.4.ebuild 1015 SHA256 ce3699d7b306298b042e7ae52edaf21df66d58b5fe6da8a95fa497c46bc45521 SHA512 c26ec79d3d1c878a3986b71eeee009f8affdde2e941cfe16c98ddae2ff78eb8433a133508dbd989d708ea91e6e7e4bf12b932191d4716e6961438b8ac9c00911 WHIRLPOOL fce37feb2809eca75f7f00f652675b95923438e3f391a0edcfaa2c2312fa4bae6fd879429642b16678c6619aaba1ce56796d07194a8b978793f6b929db03336d
-MISC ChangeLog 5657 SHA256 8e7ee83e3367bcf37dfb7ec62cbfaf9de264f8ffb67d434c8c374d47966f059e SHA512 c399d71f8534a3ac8cb4a946a48f2db35f3bbf2bceb99b9922a4de68df802e77f73bd280ff79e6706b6461eee5e8906e63329fbe1b89d7749943d549dc65a702 WHIRLPOOL 5580dd35ce3a0b92b5e54c1416a6e5ccf8087a40fb78b1c4bd887721b2d378b23132be2bbcd0cfb607eb020fad33d47971a29d518b8a194766f9bbde31a82a5d
+MISC ChangeLog 5751 SHA256 499105470893f93bca46feb684e0f852596c843b21b9b3ddfe688f89a7b1f9c9 SHA512 57bafa109f6ed3343e44aff5b51be3c9913d72e285ab9678124cec89139df5b77c1d4291e55a2a007376800a61fafdbfb818a55e1b401fee95392924e32d9f6d WHIRLPOOL 429ce672597d69f69169c74806acd4f35aa653daa768be6b4157df2ee8a0845c1e522af588907f36054bbdb1d6c3bc18f0d5e5443924eb440424b8b1fcd3d443
 MISC metadata.xml 157 SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892 SHA512 657d6b0a31ceb7ac10bedfd5cbd634d4ff47938bd2f321203f0233e53686f7e0fd460e81f82793804895c7e97cfa472c1ca44b93314574262ee8cc5745a3efd0 WHIRLPOOL 785331909f1834cdd5d797ad484ea0e35c3e44c79a8a7517a6fb5de926acd181abd57910c8d960fb2e11ea38ddea336bca309af16fcc2df68fe4b602bca120b3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSbC3eAAoJELp701BxlEWf6JUP/iJaTAmi590l3cs78cJ/eJ03
-dY90sYQJ71nRuPWkkHR5VS28yb64LWhtTiYTUUbCaqlcOUXRkvKV7+Y+LWMIiqHs
-BjQImmbS5WbTOPLhu+D+mhi1h503pIMLlko45Cl6yLZEM8SpsUZMcxmke69qQJbb
-BzEX4bAASeyJCTU1ri9Ff9t0fNhjCiiwiQsiPLvsWdiRnlQIca7Gu+7CtdOwdIbR
-auxuMjZis0b9y0vbAAGbjaG4fozzpzm+/HNm066eUB16VGqQPECLaGLL3hyY5l/h
-1+8VG853dxKCv6QN/dCCTjZ69mylBukoKn5bBWgWhzs0twj7iZ/hEpKKbhexD4Dm
-EIyrbcNUGUBkQbYExTWX63Mbt6VLjTsq4zIAJtgjhizvxUFOPKDjbRn4aWhmENSi
-dV9OPtXGF38z1ABGZipgVwQEvxSj5+lnQjqJugx6DZRVreIZbJBMd0l68DZemZX4
-uAH/DNTGw732WodtwprkyOU0RfTJEI4z3hVMjNvjxIz+0jdcTLtnt/jFGgw6o2iC
-4Qygz/dlREFnfTTPLl6HlxiDS2hvKX71rv7ysNT5EWv8svvLlSA2d69YYBKryeHs
-fgT/yhDma8BQqpeJrevq5nZvurclbTn7LgPw/rFCnN6+8NdR0htuZ//DhLbr7pG1
-0tuJKY1LpAnNgjd3/Ypp
-=wer/
+iQEcBAEBCAAGBQJSbGT7AAoJEO+t9ga+3I3aCkYIAKvV5MTv0mdJmpfH9sbbFJZJ
+Ec+FnPOHU6CI/6yTejQb8fnX2hVrLm8Yrd2YavRigL+5Nm/bWuaqIoZFBUh/dsuL
+k4HBEHi10NfPKg6671IZjznbISg1izuyoRXUlRw0+tCOg2rpVcPyWM2f9CS6CAOu
+6Ogyelpi5XYcMTrreSD9mTmTVk+XW5ZYC5zx68HVYefKixek8Fu/xAbtxfiee/kh
+2qBBUa6IHeCIMzY/CkelB8JIvOUX9VKflUYoefTj5KXc4P/uAjtNcU3u5RVlfSoR
+KDX0elaA0XBjsSf4Q8Bc5WFcrHVJz3eAS4J7TEGEAHxx/7VApOqheiNKHK1uHJE=
+=cHMe
 -----END PGP SIGNATURE-----
